tests/expectations/compiler/structs/duplicate_struct_name_fail.out
Error [EAST0372017]: The name `Point` is defined multiple times.
    --> compiler-test:7:12
     |
   2 |       struct Point {
     |              ^^^^^ previous definition of `Point` here
   ...
   7 |       struct Point {
     |              ^^^^^ `Point` redefined here
